# MTH9815

Exercise 1/: CMakeLists.txt  README.md
Exercise 1/.cache/clangd/index/: LinkedList.cpp.AEC53813AE79B0A0.idx  LinkedList.hpp.B3DB9B07A70F8ACA.idx  ListIterator.cpp.FF8FAFC33707892F.idx  ListIterator.hpp.E3E8DABAA3A2448F.idx  ListNode.cpp.A107B0403A6B65AD.idx  ListNode.hpp.4CD61C7963EB6055.idx  test_linkedlist.cpp.E2642CFA4C78DB54.idx
Exercise 1/include/: LinkedList.hpp  ListIterator.hpp  ListNode.hpp
Exercise 1/src/: LinkedList.cpp  ListIterator.cpp  ListNode.cpp  test_linkedlist.cpp
Exercise 2/: CMakeLists.txt  README.md
Exercise 2/.cache/clangd/index/: DNode.hpp.CA8D348246BB8203.idx  DoubleLinkedList.hpp.1A71DE969351EE42.idx  ListIterator.hpp.D59771CCA8E36ACA.idx  test_double_linkedlist.cpp.8D1D629B3DD983BE.idx
Exercise 2/include/: DNode.hpp  DoubleLinkedList.hpp  ListIterator.hpp
Exercise 2/src/: test_double_linkedlist.cpp
Exercise 3/: CMakeLists.txt  README.md
Exercise 3/.cache/clangd/index/: EqualityPredicate.hpp.1FA7AC42D9AC04B8.idx  GeneralEquality.hpp.9B3027FED9DB0E23.idx  GeneralHasher.hpp.8CBC62C853554202.idx  Hasher.hpp.C56AB1C65AF02729.idx  Hashtable.hpp.70678124A08E78F7.idx  test_hashtable.cpp.80DF2A1A9CACDC5A.idx
Exercise 3/include/: EqualityPredicate.hpp  GeneralEquality.hpp  GeneralHasher.hpp  Hasher.hpp  Hashtable.hpp
Exercise 3/src/: test_hashtable.cpp
